# rope-provenance

./: .gitignore  INDEX.md  LICENSE  PLAN.md  README.md  briefing_packet.md  literature_survey.md  literature_survey_part2.md  literature_survey_part3.md  pyproject.toml  research_revision_notes.md
docs/: experiments.md  literature.md  research.md  results.md
results/: angle_cost_table.md  blog_draft.md  three_arm_summary.md
results/sep/: pi8_instruction_output_audit.json  rope_prov.json  rope_prov_independent_angles_counterfactual_v2.json  rope_prov_learnable.json  rope_prov_learnable_counterfactual_v2.json  rope_prov_learnable_pi8_unfreeze_counterfactual_v2.json  rope_prov_pi8.json  rope_prov_pi8_counterfactual_v2.json  rope_prov_pre_w_learnable_counterfactual_v2.json  rope_prov_pre_w_pi8_counterfactual_v2.json  rope_prov_pre_w_rezero_counterfactual_v2_smoke.json  rope_prov_pre_w_rezero_independent_angles_counterfactual_v2_smoke.json  vanilla.json  vanilla_counterfactual_v2.json  vanilla_counterfactual_v3_role_contrast_smoke.json  vanilla_zeroed.json  vanilla_zeroed_counterfactual_v2.json  witness_sanity.json
results/slm/: qwen25_0_5b_base_gate_pretrain_answer_s0.json  qwen25_0_5b_base_gate_pretrain_answer_shift_s0.json  qwen25_0_5b_base_gate_pretrain_s0.json  qwen25_0_5b_base_hidden_role_roleonly_smoke_s0.json  (+15 more)
scripts/: analyze_slm_adapter_subspace.py  slm_gate_provenance.py  summarize_runs.py  toy_role_provenance.py  witness_sanity.py
tests/: conftest.py  test_data.py  test_parser_fuzz.py  test_phase2_smoke.py  test_phase2_wired.py  test_rotary.py
(+44 files in other folders)
