[project]
name = "rope-prov"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rope_prov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
