[project]
name = "rope-prov"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "pyyaml>=6",
    "transformers>=4.45,<4.50",
    "datasets>=4.8.5",
    "numpy>=2.2.6",
    "accelerate>=0.26",
    "wandb>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "hypothesis>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rope_prov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -m 'not slow'"
markers = [
    "slow: tests that download models or are otherwise heavy; opt in with -m slow",
]
